--- a/Lesson-3/ActivityState/app/src/main/AndroidManifest.xml
+++ b/Lesson-3/ActivityState/app/src/main/AndroidManifest.xml
@@ -8,8 +8,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-            android:configChanges="orientation|screenSize"> <!-- Команда исправит ситуацию-->
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
