Факультатив, IntentProcess: Добавление в манифест интент фильтр, для запуска этого приложения из другого приложения

--- a/Lesson-5/IntentProcess/app/src/main/AndroidManifest.xml
+++ b/Lesson-5/IntentProcess/app/src/main/AndroidManifest.xml
@@ -15,6 +15,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter android:label="ru.geekbrains.intentprocess.MainActivity">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <!-- Принимаем URI с началом "example://intent” -->
+                <data android:scheme="example"
+                    android:host="intent" />
+            </intent-filter>
         </activity>
     </application>
 
